# Rubik-cube-Cpp

./: CMakeLists.txt  README.md  cube.h  main.cpp
Controller/: ICubeController.h
Controller/SimpleController/: CSimpleController.cpp  CSimpleController.h
Model/: ICubeModel.h
Model/SimpleCube/: CSimpleCube.cpp  CSimpleCube.h
View/: ICubeView.h
View/ConsoleView/: CConsoleView.cpp  CConsoleView.h
